@@ -6,13 +6,13 @@ UpdateOSXXMLURL=http://www.antlr.org/works/update_osx.xml
 FeedbackURL=http://www.antlr.org/misc/feedback
 DocumentationURL=http://www.antlr.org/works/doc/antlrworks.pdf
 
-AppVersionShort=1.0b5
-AppVersionLong=1.0b5
+AppVersionShort=1.0b6
+AppVersionLong=1.0b6
 AppName = ANTLRWorks
-AppBuildDate=10/22/2006
+AppBuildDate=11/12/2006
 
 SplashInfo = Edit, visualize and debug ANTLR grammars
-SplashVersion = Version 1.0b5
+SplashVersion = Version 1.0b6
 SplashCopyright = (c) 2005-2006 Jean Bovet & Terence Parr
 
 DefaultFont = Monospaced
